Firefly-2058: Add update to become FITS aware
  - Fits file extraction
  - Fits readout
  - Fits cube integration
  - Wcs lock will support syncing cube planes
  - Download request can attach to an active download
  - Improved caching
  - rEdo flux readout so the the readout data all on the server
  - Fixed wcs match issue